修改Linux版tomcat的setenv.sh示例